--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          <div class="contenedor-texto"> 
             <h2>Mi compañera de vida...</h2>
             <p>Sin dudas a que mi corazón te escogió a tí para que me acompañes en esta aventura que se llama vida, y pues no dudes que yo estare allí para 
-               ti cuando mas lo necesites OK, estare para apoyarte y darta mimos y cariños cuando sea me lo pidas o no te amare y respetare por que estoy enamorado
+               ti cuando mas lo necesites OK, estare para apoyarte y darte mimos y cariños cuando sea me lo pidas o no te amare y respetare por que estoy enamorado
                y pues tu sabes mejor que nadie que quiero ser mejor...
             </p>
                <a href="#sec3">Siguiente...</a>
